<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 C. Todd Cook. All rights reserved.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4FC3F7"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity_EditVehicle"
    tools:showIn="@layout/activity_edit_vehicle">
    <LinearLayout
        android:id="@+id/vehicle_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/edit_vehicle_name_label"/>

            <EditText
                android:id="@+id/vehicle_edit_name"
                style="@style/EditDetailStyle"
                android:hint="@string/edit_vehicle_name_hint"
                android:imeOptions="actionNext"
                android:inputType="text|textCapWords|textAutoComplete"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/edit_vehicle_color_label"/>

            <EditText
                android:id="@+id/vehicle_edit_color"
                style="@style/EditDetailStyle"
                android:hint="@string/edit_vehicle_color_hint"
                android:imeOptions="actionNext"
                android:inputType="text|textCapWords|textAutoComplete"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/edit_vehicle_model_year_label"/>

            <EditText
                android:id="@+id/vehicle_edit_year"
                style="@style/EditDetailStyle"
                android:hint="@string/edit_vehicle_model_year_hint"
                android:imeOptions="actionNext"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/edit_vehicle_model_label"/>

            <EditText
                android:id="@+id/vehicle_edit_model"
                style="@style/EditDetailStyle"
                android:hint="@string/edit_vehicle_model_hint"
                android:imeOptions="actionNext"
                android:inputType="text|textCapWords|textAutoComplete"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/edit_vehicle_license_plate_label"/>

            <EditText
                android:id="@+id/vehicle_edit_license_plate"
                style="@style/EditDetailStyle"
                android:hint="@string/edit_vehicle_license_plate_hint"
                android:imeOptions="actionNext"
                android:inputType="text|textCapCharacters|textNoSuggestions"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/edit_vehicle_vin_label"/>

            <EditText
                android:id="@+id/vehicle_edit_vin"
                style="@style/EditDetailStyle"
                android:hint="@string/edit_vehicle_vin_hint"
                android:imeOptions="actionDone"
                android:inputType="text|textCapCharacters|textNoSuggestions"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vehicle_details_layout"
        android:padding="8dp"
        android:text="@string/edit_vehicle_hint"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            style="@style/CancelButton"
            android:onClick="cancelAddVehicle"/>

        <Button
            style="@style/SaveButton"
            android:onClick="processEdits"/>
    </LinearLayout>


</RelativeLayout>
