<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 C. Todd Cook. All rights reserved.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:paddingBottom="8dp"
            android:text="@string/all_vehicle_label"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/fueling_detail_vehicle"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/all_datetime_label"/>

        <TextView
            android:id="@+id/fueling_detail_date"
            style="@style/ViewDetailStyle"/>


    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/edit_fueling_distance_label"/>

        <TextView
            android:id="@+id/fueling_detail_distance"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/edit_fueling_volume_label"/>

        <TextView
            android:id="@+id/fueling_detail_volume"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/edit_fueling_total_price_paid_label"/>

        <TextView
            android:id="@+id/fueling_detail_total_price_paid"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/edit_fueling_location_label"/>

        <TextView
            android:id="@+id/fueling_detail_location"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/edit_fueling_odometer_label"/>

        <TextView
            android:id="@+id/fueling_detail_odometer"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>


    <!--
    A dividing line between top and bottom
    -->

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/divider"/>



    <!--
    Following are calculated numbers
    -->

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/all_fuel_efficiency_label"/>

        <TextView
            android:id="@+id/fueling_detail_efficiency"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/all_unit_price_label"/>

        <TextView
            android:id="@+id/fueling_detail_price_per_unit"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/all_cost_efficiency_label"/>

        <TextView
            android:id="@+id/fueling_detail_price_per_distance"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/row_fueling_details_coordinates"/>

        <TextView
            android:id="@+id/fueling_detail_coordinates"
            style="@style/ViewDetailStyle"
            android:onClick="showMap"/>

    </LinearLayout>

    <TextView
        android:id="@+id/fueling_gps_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/edit_fueling_gps_hint"
        android:textColor="#000000"
        android:textSize="13sp"/>

</LinearLayout>
