<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 C. Todd Cook. All rights reserved.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:paddingBottom="8dp"
            android:text="@string/all_vehicle_label"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/span_detail_vehicle"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/all_period_label"/>

        <TextView
            android:id="@+id/span_detail_period"
            style="@style/ViewDetailStyle"/>


    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/averages_distance_label"/>

        <TextView
            android:id="@+id/span_detail_distance"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/averages_volume_label"/>

        <TextView
            android:id="@+id/span_detail_volume"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/averages_total_price_paid_label"/>

        <TextView
            android:id="@+id/span_detail_total_price_paid"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/averages_fuel_efficiency_label"/>

        <TextView
            android:id="@+id/span_detail_efficiency"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/averages_unit_price_label"/>

        <TextView
            android:id="@+id/span_detail_price_per_unit"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LabelDataPairStyle">

        <TextView
            style="@style/DetailLabelStyle"
            android:text="@string/averages_cost_efficiency_label"/>

        <TextView
            android:id="@+id/span_detail_price_per_distance"
            style="@style/ViewDetailStyle"/>

    </LinearLayout>

</LinearLayout>
