<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 C. Todd Cook. All rights reserved.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4FC3F7"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity_EditFueling"
    tools:showIn="@layout/activity_edit_fueling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:paddingBottom="8dp"
                android:text="@string/all_vehicle_label"/>

            <Spinner
                android:id="@+id/fueling_vehicle_spinner"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/all_date_label"/>

            <TextView
                android:id="@+id/fueling_edit_date"
                style="@style/EditDetailStyle"
                android:hint="@string/all_date_label"
                android:onClick="showDatePickerDialog"/>


        </LinearLayout>

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/edit_fueling_time_label"/>

            <TextView
                android:id="@+id/fueling_edit_time"
                style="@style/EditDetailStyle"
                android:hint="@string/edit_fueling_time_label"
                android:onClick="showTimePickerDialog"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/edit_fueling_distance_label"/>

            <EditText
                android:id="@+id/fueling_edit_distance"
                style="@style/EditDetailStyle"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/edit_fueling_distance_label"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/edit_fueling_volume_label"/>

            <EditText android:id="@+id/edit_volume"
                      style="@style/EditDetailStyle"
                      android:inputType="numberDecimal"
                      android:imeOptions="actionNext"
                      android:hint="@string/edit_fueling_volume_label"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/edit_fueling_total_price_paid_label"/>

            <EditText
                android:id="@+id/fueling_edit_total_price_paid"
                style="@style/EditDetailStyle"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/edit_fueling_total_price_paid_label"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/edit_fueling_location_label"/>

            <EditText
                android:id="@+id/fueling_edit_location"
                style="@style/EditDetailStyle"
                android:inputType="textAutoComplete|textCapWords"
                android:imeOptions="actionNext"
                android:hint="@string/edit_fueling_location_label"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LabelDataPairStyle">

            <TextView
                style="@style/DetailLabelStyle"
                android:text="@string/edit_fueling_odometer_label"/>

            <EditText
                android:id="@+id/fueling_edit_odometer"
                style="@style/EditDetailStyle"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:hint="@string/edit_fueling_odometer_label"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <Button
            style="@style/CancelButton"
            android:onClick="cancelAddFueling"/>

        <Button
            style="@style/SaveButton"
            android:onClick="processEdits"/>
    </LinearLayout>
</RelativeLayout>



